# thread

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md  comprehensive_example.rs  device_model_integration.rs  device_operations.rs  error_handling.rs  logging_example.rs  multi_device.rs  output_tracking.rs  phase2_comprehensive_demo.rs  phase3_api_modernization_demo.rs  pwm_phase1_demo.rs  show_device_types.rs  simple_controller.rs  simple_device_info.rs  state_observer.rs  thread_management.rs  unified_discovery.rs
plans/: core-library-alignment.md  phase1-completion-summary.md
src/: builder.rs  commands.rs  controller.rs  controller_builder.rs  error.rs  lib.rs  logging.rs  model_methods.rs  observer.rs  operations.rs  state.rs  sync.rs  tests.rs  worker.rs
tests/: controller_tests.rs  model_integration_tests.rs  observer_tests.rs  phase2_feature_tests.rs  phase3_api_tests.rs  pwm_phase1_tests.rs  sync_tests.rs  thread_model_integration_tests.rs  worker_tests.rs
